# card-api

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yaml
.cargo/: config.toml
adapter/: Cargo.toml
adapter/src/input/config/: app.rs  error.rs  mod.rs  repository.rs  secret.rs  server.rs
adapter/src/input/server/: error.rs  middleware.rs  mod.rs  response.rs
adapter/src/input/server/api/: mod.rs
adapter/src/input/server/api/handler/: identity.rs  mod.rs  openapi.rs
adapter/src/input/server/api/handler/identity/: auth.rs  create.rs  login.rs  mod.rs
adapter/src/input/server/middleware/: mod.rs
adapter/src/input/server/middleware/auth/: error.rs  mod.rs
adapter/src/input/server/middleware/id/: error.rs  mod.rs
adapter/src/input/server/system/: handler.rs  mod.rs
adapter/src/output/: mod.rs  tracing.rs
adapter/src/output/repository/: error.rs  identity.rs  mod.rs
docs/: context.puml
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/crypt/: b64_url.rs  error.rs  mod.rs  token.rs
domain/src/ctx/: mod.rs
domain/src/identity/: domain.rs  error.rs  mod.rs  repository.rs  service.rs
domain/src/identity/use_case/: authorization.rs  create.rs  login.rs  mod.rs
entrypoint/: Cargo.toml
entrypoint/src/: main.rs
entrypoint/tests/: api.rs  system.rs
it/: Cargo.toml
it/src/input/server/: mod.rs  system.rs
it/src/input/server/api/: identity.rs  mod.rs
it/tests/: api_identity_auth.rs  api_identity_create.rs  api_identity_login.rs  system_liveness.rs  system_readiness.rs
migrate/: liquibase.local.properties
migrate/changelog/: root.changelog.yml
migrate/changelog/init/: root.yml
migrate/changelog/init/ddl/: 001_create_tables.sql
src/: error.rs  main.rs
src/core/: mod.rs
src/core/crypt/: error.rs  hmac.rs  mod.rs
src/core/ctx/: mod.rs
src/core/identity/: domain.rs  error.rs  mod.rs  repository.rs  service.rs
src/core/identity/use_case/: create.rs
src/input/config/: error.rs  mod.rs
src/input/server/: error.rs  middleware.rs  mod.rs  response.rs
src/input/server/api/: error.rs  mod.rs
src/input/server/api/handler/: identity.rs  mod.rs
src/input/server/system/: error.rs  handler.rs  mod.rs
src/output/repository/: identity.rs  mod.rs
tests/: api.rs
