[package]
name = "card-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Runtime
tokio = { version = "1", features = ["full"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Storage
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "time" ] }
# -- Other
uuid = { version = "1.4", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0"
