[workspace]

members = ["domain"]

[package]
name = "card-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Module
domain = { path = "./domain" }
# -- Runtime
tokio = { version = "1", features = ["full"] }
# -- Http
hyper = "0.14"
axum = "0.6"
# Serder + Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Storage
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "time" ] }
# -- Crypt
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
# -- Other
uuid = { version = "1.4", features = ["v4", "serde"] }
async-trait = "0.1"
strum_macros = "0.25"

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1"
rand = "0.8"
