[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Module
domain = { path = "../domain" }
# Http
axum = { version = "0.6", features = ["headers"] }
# OpenAPI
utoipa = { version = "4", features = ["uuid"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
# Serder + Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# Tracing
tracing = "0.1"
# Storage
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "time" ] }
# Data type
uuid = { version = "1.4", features = ["v4", "serde"] }
time = "0.3"
# Other
async-trait = "0.1"
strum_macros = "0.25"

[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
