[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Crypt
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
# -- Data type
uuid = { version = "1.4", features = ["v4"] }
# -- Other
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
