[package]
name = "entrypoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Module
adapter = { path = "../adapter" }
# Runtime
tokio = { version = "1", features = ["full"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "valuable"] }
tracing-bunyan-formatter = "0.3"
tracing-appender = "0.2"
