[package]
name = "it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = "1"
# Http Client
hyper = { version = "0.14", features = ["client", "http1", "runtime"] }
# Serder + Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# Other
async-trait = "0.1"
